@@ -518,6 +518,17 @@ android {
         }
     }
 
+    buildTypes {
+        debug {
+            externalNativeBuild {
+                cmake {
+                    // We want to build Gtest suite only for the debug variant.
+                    targets "reactnative_unittest"
+                }
+            }
+        }
+    }
+
     preBuild.dependsOn(prepareJSC, prepareBoost, prepareDoubleConversion, prepareFmt, prepareFolly, prepareGlog, prepareLibevent)
     preBuild.dependsOn("generateCodegenArtifactsFromSchema")
     preBuild.dependsOn(preparePrefab)
@@ -647,6 +658,17 @@ android {
             includeBuildTypeValues('debug', 'release')
         }
     }
+
+    testOptions {
+        unitTests.all {
+            // Robolectric tests are downloading JARs at runtime. This allows to specify
+            // a local file mirror with REACT_NATIVE_ROBOLECTRIC_MIRROR to go in offline more.
+            if (System.getenv("REACT_NATIVE_ROBOLECTRIC_MIRROR") != null) {
+                systemProperty 'robolectric.offline', 'true'
+                systemProperty 'robolectric.dependency.dir', System.getenv("REACT_NATIVE_ROBOLECTRIC_MIRROR")
+            }
+        }
+    }
 }
 
 dependencies {
@@ -681,6 +703,7 @@ dependencies {
     testImplementation("org.powermock:powermock-classloading-xstream:${POWERMOCK_VERSION}")
     testImplementation("org.powermock:powermock-module-junit4-rule:${POWERMOCK_VERSION}")
     testImplementation("org.robolectric:robolectric:${ROBOLECTRIC_VERSION}")
+    testImplementation("com.thoughtworks.xstream:xstream:1.4.20")
 
     androidTestImplementation(fileTree(dir: "src/main/third-party/java/buck-android-support/", include: ["*.jar"]))
     androidTestImplementation("androidx.test:runner:${ANDROIDX_TEST_VERSION}")
@@ -699,6 +722,26 @@ react {
     // This should be changed to a more generic name, e.g. `ReactCoreSpec`.
     libraryName = "rncore"
     jsRootDir = file("../Libraries")
+}
+
+tasks.withType(Test).all {
+    // We add --add-opens flags to make sure we can run PowerMock tests on JDK >= 17
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+        jvmArgs += [
+            "-XX:+AllowRedefinitionToAddDeleteMethods",
+            "--illegal-access=permit",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.xml.internal=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+            "--add-opens=java.base/java.net=ALL-UNNAMED",
+            "--add-opens=java.base/java.security=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
+            "--add-opens=java.base/jdk.xml.internal=ALL-UNNAMED",
+        ]
+    }
 }
 
 apply plugin: "org.jetbrains.kotlin.android"
